# com304-go2

./: .gitignore  .gitmodules  README.md  ckpt_to_model_only.py
013/: exp_cfg.yaml
RL_Habitat_Homework/: README.md  RL_Habitat_Homework.ipynb  RL_Habitat_Homework2.ipynb  example.py  grade_hw.py  trained_agent.py
RL_Habitat_Homework/scripts/: generate_profile_shell_scripts.py
com304/: CMakeLists.txt  README.md  controller.cpp  setup.py
com304/src/: TrajectoryController.cpp  VelocityController.cpp  controller.cpp  test.cpp
go2/: README.md
go2/go2_ethernet/: CMakeLists.txt  Makefile  README.md
go2/go2_ethernet/src/: Sit.cpp
go2/go2_local_ws/: README.md  startup.bash
go2/go2_local_ws/src/com304_go2/: package.xml  setup.py
go2/go2_local_ws/src/com304_go2/com304_go2/: go2_autonomous_node.py  go2_camera_node.py  go2_control_node.py  go2_depth_node.py
go2/go2_local_ws/src/com304_go2/com304_go2/habitat_utils/: policy.py  ppo.py  rnn_state_encoder.py
go2/go2_local_ws/src/com304_go2/config/: config.yaml
go2/go2_local_ws/src/com304_go2/launch/: movement.launch.py
go2/go2_wifi_ws/: README.md  reclone_sdk.sh
go2_ws/: README.md
go2_ws/src/: custom-agent.py  monodepth2.py  requirements.txt  square.sh
habitat/: Readme.md
habitat/config/: pointnav_habitat_test.yaml
habitat/examples/: actions_and_sensors.py  interactive_example.py
isaac/: README.md
isaac/assets/: .gitattributes
isaac/targetnav/: __init__.py  base_env_setup.py  train.py  zero_agent.py
tb/: events.out.tfevents.1713899062.david-Vivobook-ASUSLaptop-N7401ZE-N7401ZE.37392.0
(+70 files in other folders)
